overflow fix

--- a/src/css/desktopApp.css
+++ b/src/css/desktopApp.css
@@ -73,6 +73,8 @@ body {
     scroll-snap-stop: always;
     width: 100vw;
     height: 100vh;
+    overflow-x: hidden;
+    overflow-y: hidden;
     background-size: cover !important;
     background-repeat: no-repeat !important;
 }
@@ -195,10 +197,6 @@ div[data-testid="container"] div:nth-of-type(3) div {
     left: 63%;
     font-size: 1.4em;
     margin: 0;
-}
-
-.desktop-intro-second {
-    margin-top: -2.8em;
 }
 
 .desktop-intro-second-content h1 {
